# rust_rtsp_server

./: Cargo.toml  readme.md
src/: video_server.rs
