[package]
name = "rust-rtsp-server"
version = "0.1.0"
authors = ["Sean <xxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
gstreamer = "0.16.0"
gstreamer-app = "0.16.0"
gstreamer-video = "0.16.0"
failure = "0.1.6"
futures = "0.3.1"
clap = "2.31"
anyhow = "1.0"
derive_more = "0.99.5"
